welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:22: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  while (getDirection()!=Direction.north){
  ^SnakeBuggle:25: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (estFaceMur){
  ^